@@ -25,16 +25,11 @@ supposed to be integrated in blockem at some point in the future:
    three pieces...
  + Improve evaluation function through bitwise representations of boards and 
    pieces. There's already some code done but it is too slow
- + why not making starting coordinate editable at all times (not only when a
-   new game is launched)?
  + Fix warnings when compiling in windows
  + Checks like #ifdef WIN32 should be changed into something that is set by
    autotools in config.h
  + Add default button to the new/config dialog
  + Convert std::lists to standard arrays in Piece
- + Cancel a current move to apply changes done in config dialog. Starting 
-   coord should be available to be changed in the config dialog (it is only
-   possible in the new game dialog at the moment)
  + Use precalculated array of pieces in minimax algorithm without setting
    current piece coords. At the moment there's a call to SetCurrentCoords per
    every coordinate retrieved from the array. Might be easier to check first
